FUSETOOLS-1257 - Overrides Launch Configuration with JVM Server Runtime values